--- a/components/molecules/SearchBox/SearchBox.module.scss
+++ b/components/molecules/SearchBox/SearchBox.module.scss
@@ -1,35 +1,36 @@
-@import '../../styles/config';
+@import "../../styles/config";
 
 .searchBox {
-  border-radius: $sp-1;
-  background-color: $grey-20;
-  padding: 0 $sp-2;
-  display: flex;
-  align-items: center;
+	border-radius: $sp-1;
+	background-color: $grey-20;
+	padding: 0 $sp-2;
+	display: flex;
+	align-items: center;
 
-  &:focus-within {
-    background-color: $grey-10;
-  }
+	&:focus-within {
+		background-color: $grey-10;
+	}
 }
 
 .searchBtn {
-  width: $sp-3;
+	width: $sp-3;
 }
 
 .searchField {
-  margin: 0 $sp-2;
-  order: 1;
-  width: 100%;
+	margin: 0 $sp-2;
+	order: 1;
+	width: 100%;
 
-  input::placeholder {
-    color: $grey-60;
-    opacity: 1;
-  }
+	input::placeholder {
+		color: $grey-60;
+		opacity: 1;
+	}
 
-  &:focus-within {
-    + .searchBtn {
-      order: 2;
-      color: $blue-60;
-    }
-  }
+	&:focus-within {
+
+		+ .searchBtn {
+			order: 2;
+			color: $blue-60;
+		}
+	}
 }
