--- a/components/organisms/Header/Header.module.scss
+++ b/components/organisms/Header/Header.module.scss
@@ -1,27 +1,34 @@
-@import '../../styles/config';
+@import "../../styles/config";
 
 .header {
+
 	@apply transition-all z-50 border-b shadow bg-gray-100;
 
 	.search {
+
 		@apply mb-8 flex justify-center;
 
 		@screen lg {
+
 			@apply justify-end;
 		}
 	}
 
 	.navigation {
+
 		@apply flex flex-col items-center;
 
 		@screen lg {
+
 			@apply flex-row items-end justify-between;
 		}
 
 		.logo {
+
 			@apply mb-8 w-32 h-auto;
 
 			@screen lg {
+
 				@apply mb-0;
 			}
 		}
@@ -29,6 +36,7 @@
 }
 
 .scrollingLogo {
+
 	img {
 		max-width: 55px;
 		max-height: 77px;
