--- a/components/organisms/MobileMenu/MenuPath.module.scss
+++ b/components/organisms/MobileMenu/MenuPath.module.scss
@@ -1,23 +1,23 @@
-@import '../../styles/config';
+@import "../../styles/config";
 
 .container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 
-  img {
-    max-width: 55px;
-  }
+	img {
+		max-width: 55px;
+	}
 }
 
 .btn {
-  font-size: 2rem;
-  width: 3rem;
-  min-width: 3rem;
-  height: 3rem;
-  max-height: 3rem;
+	font-size: 2rem;
+	width: 3rem;
+	min-width: 3rem;
+	height: 3rem;
+	max-height: 3rem;
 }
 
 .hidden {
-  visibility: hidden;
+	visibility: hidden;
 }
