--- a/components/organisms/UserMenu/UserMenu.module.scss
+++ b/components/organisms/UserMenu/UserMenu.module.scss
@@ -1,6 +1,7 @@
-@import '../../styles/config';
+@import "../../styles/config";
 
 .login {
+
 	@media screen and ( max-width: $sm ) {
 		width: 48px;
 		min-width: 48px;
