--- a/components/styles/_config.scss
+++ b/components/styles/_config.scss
@@ -1,4 +1,4 @@
-@import './config/colors';
-@import './config/grid';
-@import './config/typography';
-@import './config/spacing';
+@import "./config/colors";
+@import "./config/grid";
+@import "./config/typography";
+@import "./config/spacing";
