--- a/components/styles/config/_typography.scss
+++ b/components/styles/config/_typography.scss
@@ -1,7 +1,7 @@
-$montserrat: 'Montserrat', -apple-system, 'BlinkMacSystemFont', 'Segoe UI',
-	'Helvetica Neue', 'Arial', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-	'Segoe UI Symbol';
+$montserrat: "Montserrat", -apple-system, "BlinkMacSystemFont", "Segoe UI",
+	"Helvetica Neue", "Arial", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+	"Segoe UI Symbol";
 
-$assistant: 'Assistant', -apple-system, 'BlinkMacSystemFont', 'Segoe UI',
-	'Helvetica 	Neue', 'Arial', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-	'Segoe UI Symbol';
+$assistant: "Assistant", -apple-system, "BlinkMacSystemFont", "Segoe UI",
+	"Helvetica 	Neue", "Arial", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+	"Segoe UI Symbol";
